@@ -43,6 +43,8 @@ Fixed
 API Changes
     Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
     Image description when searching images now contains html, the plain description is now kept in the key origDescription
+    projectGraphData became projectsUsageGraphData when fetching the general dashboard
+    stats key was removed fetching the general dashboard
 
 
 0.13.0 - 18/07/2020
